@@ -22,6 +22,7 @@
     (in case they were modified)
     - Fixed event notify bug: mailnotify used to send all the emails to the event
     originator
+    - Order can be used now in Issue, SearchResult and Article lists
 
 2.0.10
     - Fixed the 'Back to article details' bug
